test/fixtures/source-map/output/source_map_no_source_file.snapshot
<project-root>/test/fixtures/source-map/no-source.js:2
    throw new Error('foo');
    ^

Error: foo
    at Throw (<project-root>/test/fixtures/source-map/file-not-exists.ts:2:9)
    at Object.<anonymous> (<project-root>/test/fixtures/source-map/file-not-exists.ts:5:1)

Node.js <node-version>
